2007-12-27  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_initialized):
	new function

	* avatar.c (avt_wait_button, avt_wait_key):
	show mouse pointer while waiting for a key (or mouse button)	

	* avatarsay.c:
	program has a main menu now
	fix: rawmode (fixes bug #21889)

        * avatar.c (avt_quit)
          avatar-audio.c (avt_initialize_audio, avt_quit_audio):
        avt_quit automatically calls avt_quit_audio if appropriete          

	* avatar.c (avt_analyze_event):
	Ctrl + Q also sets AVATARQUIT event

	* avatar.c (avt_mb_encoding):
	get internal WCHAR_ENCODING purely from preprocessor definitions

	* akfavatar.h:
	remove keyword "extern" from prototypes (just a cosmetic change)

	* akfavatar.h, avatar.c (avt_switch_mode):
	new function

	* avatar.c (avt_toggle_fullscreen):
	set avt_mode

	* akfavatar.h, avatar.c (avt_wait_button):
	new function

	* akfavatar.h, avatar.c (avt_wait_key):
	fix: deleting message

	* akfavatar.h, avatar.c (avt_get_key):
	new function

2007-12-07  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.14.5 released
	
	* image human-peasant.bmp removed

	* C++ comaptibility improvements
	(wint_t is used again)

	* akfavatar.h, avatar.c (avt_register_keyhandler):
	use new type avt_keyhandler

	* avatarsay.c:
	major rewrite -> low level file handling, 
	supports UTF-16/UTF-32 files now, better FIFO handling
	experimental support for calling external programs
	uses nl_langinfo to get the current encoding
	uses getopt_long to parse options

	* akfavatar.h, avatar.c (avt_update):
	new function

	* avatar.c (avt_put_char):
	don't ignore false BOM anymore, just the real BOM

	* akfavatar.pas:
	use avt_say_mb_len
	fix fo FPC: for output only the flush function gets defined 
	
        * akfavatar.h (avt_mb_decode, avt_free):
	new functions

	* avatar.c (avt_put_char):
	new function
	
	* akfavatar.h, avatar.c (avt_say_len, avt_say_mb_len):
	new functions

	* avatar.c (avt_mb_decode):